--- a/online_gift_store/package.json
+++ b/online_gift_store/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "mdbootstrap": "^4.14.0",
-    "mdbreact": "^4.25.3",
+    "mdbreact": "git+https://oauth2:y9KVReyBzZVjomAdNHi7@git.mdbootstrap.com/mdb/react/re-pro.git",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactjs-popup": "^1.5.0"
