--- a/online_gift_store/package.json
+++ b/online_gift_store/package.json
@@ -11,6 +11,7 @@
     "mdbootstrap": "^4.14.0",
     "mdbreact": "git+https://oauth2:y9KVReyBzZVjomAdNHi7@git.mdbootstrap.com/mdb/react/re-pro.git",
     "react": "^16.12.0",
+    "react-animation": "^1.2.2",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
